test/corpus/ORA.txt
==========================
ORA #$BB
==========================

ora #$b3
ora #233
ora #%1101110

---

(asm
  (inst
    (imm_opc
      (ora_opc)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (ora_opc)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (ora_opc)
      (num_8
        (bin_num_8)))))

==========================
ORA $LL
==========================

ora $02
ora 005
ora %11011001

---

(asm
  (inst
    (zpg_opc
      (ora_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (ora_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (ora_opc)
      (num_8
        (bin_num_8)))))

==========================
ORA $LL,X
==========================

ora $60, x
ora 199, x
ora %1001100, x

---

(asm
  (inst
    (zpg_x_opc
      (ora_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (ora_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (ora_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
ORA $LLHH
==========================

ora $b891
ora 47249
ora %1011100010010001

---

(asm
  (inst
    (abs_opc
      (ora_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (ora_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (ora_opc)
      (num_16
        (bin_num_16)))))

==========================
ORA $LLHH,X
==========================

ora $85fc,x
ora 1843,x
ora %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (ora_opc)
      (num_16
        (hex_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (ora_opc)
      (num_16
        (dec_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (ora_opc)
      (num_16
        (bin_num_16))
      (x_reg))))

==========================
ORA $LLHH,Y
==========================

ora $dc49,y
ora 56393,y
ora %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (ora_opc)
      (num_16
        (hex_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (ora_opc)
      (num_16
        (dec_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (ora_opc)
      (num_16
        (bin_num_16))
      (y_reg))))

==========================
ORA ($LL,X)
==========================

ora ($DB, x)
ora (219, x)
ora (%11011011, x)

---

(asm
  (inst
    (x_ind_opc
      (ora_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (ora_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (ora_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
ORA ($LL),Y
==========================

ora ($A9), y
ora (169), y
ora (%10101001), y

---

(asm
  (inst
    (ind_y_opc
      (ora_opc)
      (num_8
        (hex_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (ora_opc)
      (num_8
        (dec_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (ora_opc)
      (num_8
        (bin_num_8))
      (y_reg))))
