test/corpus/SBC.txt
==========================
SBC #$BB
==========================

sbc #$b3
sbc #233
sbc #%1101110

---

(asm
  (inst
    (imm_opc
      (sbc_opc)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (sbc_opc)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (sbc_opc)
      (num_8
        (bin_num_8)))))

==========================
SBC $LL
==========================

sbc $02
sbc 005
sbc %11011001

---

(asm
  (inst
    (zpg_opc
      (sbc_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (sbc_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (sbc_opc)
      (num_8
        (bin_num_8)))))

==========================
SBC $LL,X
==========================

sbc $60,x
sbc 199,x
sbc %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (sbc_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (sbc_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (sbc_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
SBC $LLHH
==========================

sbc $b891
sbc 47249
sbc %1011100010010001

---

(asm
  (inst
    (abs_opc
      (sbc_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (sbc_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (sbc_opc)
      (num_16
        (bin_num_16)))))

==========================
SBC $LLHH,X
==========================

sbc $85fc,x
sbc 1843,x
sbc %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (sbc_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (sbc_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (sbc_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))

==========================
SBC $LLHH,Y
==========================

sbc $dc49,y
sbc 56393,y
sbc %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (sbc_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (sbc_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (sbc_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))

==========================
SBC ($LL,X)
==========================

sbc ($DB,x)
sbc (219,x)
sbc (%11011011,x)

---

(asm
  (inst
    (x_ind_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg)
      (r_parentheis))))

==========================
SBC ($LL),Y
==========================

sbc ($A9),y
sbc (169),y
sbc (%10101001),y

---

(asm
  (inst
    (ind_y_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (sbc_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (r_parentheis)
      (comma)
      (y_reg))))
