test/corpus/STX.txt
==========================
STX $LL
==========================

stx $02
stx 005
stx %11011001

---

(asm
  (inst
    (zpg_opc
      (stx_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (stx_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (stx_opc)
      (num_8
        (bin_num_8)))))

==========================
STX $LL,Y
==========================

stx $60,y
stx 199,y
stx %1001100,y

---

(asm
  (inst
    (zpg_y_opc
      (stx_opc)
      (num_8
        (hex_num_8))
      (comma)
      (y_reg)))
  (inst
    (zpg_y_opc
      (stx_opc)
      (num_8
        (dec_num_8))
      (comma)
      (y_reg)))
  (inst
    (zpg_y_opc
      (stx_opc)
      (num_8
        (bin_num_8))
      (comma)
      (y_reg))))

==========================
STX $LLHH
==========================

stx $b891
stx 47249
stx %1011100010010001

---

(asm
  (inst
    (abs_opc
      (stx_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (stx_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (stx_opc)
      (num_16
        (bin_num_16)))))
