test/corpus/STY.txt
==========================
STY $LL
==========================

sty $02
sty 005
sty %11011001

---

(asm
  (inst
    (zpg_opc
      (sty_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (sty_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (sty_opc)
      (num_8
        (bin_num_8)))))

==========================
STY $LL,X
==========================

sty $60,x
sty 199,x
sty %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (sty_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (sty_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (sty_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
STY $LLHH
==========================

sty $b891
sty 47249
sty %1011100010010001

---

(asm
  (inst
    (abs_opc
      (sty_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (sty_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (sty_opc)
      (num_16
        (bin_num_16)))))
