test/corpus/constants.txt
===================
constant assignment
===================

zeropage = $00

---

(asm
  (symbol_def
    (const_assignment
      (symbol)
      (exp
        (num_32)))))

===================
label assignment
===================

loop := $0000

---

(asm
    (symbol_def
      (const_assignment
        (symbol)
        (exp
          (num_32)))))

===================
standard labels
===================

loop:
  NOP
  JMP loop

---

(asm
  (symbol_def
    (label_def))
  (inst
    (impl_opc
      (nop_opc)))
  (inst
    (abs_opc
      (jmp_opc)
      (symbol))))

===================
cheap labels
===================

@loop:
  NOP
  JMP @loop

---

(asm
  (symbol_def
    (label_def))
  (inst
    (impl_opc
      (nop_opc)))
  (inst
    (abs_opc
      (jmp_opc)
      (symbol))))
